package org.marco.designpattern.gof.creational.factory.abstractfactory;

public class ConcreteProductA extends IProductA {
    @Override
    public void doA() {
        System.out.println("do A");
    }
}
