package org.marco.designpattern.gof.creational.factory.abstractfactory;

public class ConcreteProductB extends IProductB {
    @Override
    public void doB() {
        System.out.println("do B");
    }
}
