package org.marco.designpattern.gof.creational.factory.simplefactory;

/**
 * @author: zyr
 * @date: 2019/5/23
 * @description: 产品A
 */
public class ProductA extends AbstractProduct {
}
